--- a/trunk/SwingAnalyzer/AndroidManifest.xml
+++ b/trunk/SwingAnalyzer/AndroidManifest.xml
@@ -13,7 +13,8 @@
         <activity
             android:name=".SwingAnalyzerActivity"
             android:label="@string/app_name" android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.NoTitleBar">
+            android:theme="@android:style/Theme.NoTitleBar"
+            android:windowSoftInputMode="stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,10 +22,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".ConvertDataActivity" android:label="Convert data"
-            android:screenOrientation="portrait" >            
+            android:screenOrientation="portrait" android:windowSoftInputMode="stateHidden">            
         </activity>
         <activity android:name=".DetectingPointActivity" android:label="Detecting points"
-            android:screenOrientation="portrait">            
+            android:screenOrientation="portrait" android:windowSoftInputMode="stateHidden">            
         </activity>
     </application>
 
