--- a/SwingAnalyzer/AndroidManifest.xml
+++ b/SwingAnalyzer/AndroidManifest.xml
@@ -8,7 +8,7 @@
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	
     <application
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/golf_analyzer_icon"
         android:label="@string/app_name" >
         <activity
             android:name=".SwingAnalyzerActivity"
