--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,6 +34,7 @@
         <activity android:name=".StatisticsActivity" android:label="Statistics"
             android:screenOrientation="portrait" android:windowSoftInputMode="stateHidden">
         </activity>
+        <activity android:name="org.achartengine.GraphicalActivity" />
     </application>
 
 </manifest>
