--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:icon="@drawable/golf_analyzer_icon"
         android:label="@string/app_name" >
         <activity
-            android:name=".SwingAnalyzerActivity"
+            android:name=".CollectingAccelerationData"
             android:label="@string/app_name" android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar"
             android:windowSoftInputMode="stateHidden">
@@ -21,12 +21,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ConvertDataActivity" android:label="Convert data"
-            android:screenOrientation="portrait" android:windowSoftInputMode="stateHidden">            
-        </activity>
+        
         <activity android:name=".DetectingPointActivity" android:label="Detecting points"
             android:screenOrientation="portrait" android:windowSoftInputMode="stateHidden">            
         </activity>
+        
+        
+        <activity android:name=".SwingFeedback" android:label="Swing Analysis"
+            android:screenOrientation="portrait" android:windowSoftInputMode="stateHidden">            
+        </activity>
+        
+        <activity android:name=".StatisticsActivity" android:label="Statistics"
+            android:screenOrientation="portrait" android:windowSoftInputMode="stateHidden">
+        </activity>
+        <activity android:name="org.achartengine.GraphicalActivity" />
     </application>
 
 </manifest>
