--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:icon="@drawable/golf_analyzer_icon"
         android:label="@string/app_name" >
         <activity
-            android:name=".CollectingAccelerationData"
+            android:name=".Home"
             android:label="@string/app_name" android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar"
             android:windowSoftInputMode="stateHidden">
@@ -20,6 +20,14 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".RealSwingAnalysisActivity" android:label="Detecting points"
+            android:screenOrientation="portrait" android:windowSoftInputMode="stateHidden">            
+        </activity>
+        
+        
+        <activity android:name=".CollectingAccelerationData" android:label="Collecting Data" 
+            android:screenOrientation="portrait" android:windowSoftInputMode="stateHidden">
         </activity>
         
         <activity android:name=".DetectingPointActivity" android:label="Detecting points"
@@ -34,6 +42,11 @@
         <activity android:name=".StatisticsActivity" android:label="Statistics"
             android:screenOrientation="portrait" android:windowSoftInputMode="stateHidden">
         </activity>
+        
+        <activity android:name=".SettingsActivity" android:label="Settings"
+            android:screenOrientation="portrait" android:windowSoftInputMode="stateHidden">
+        </activity>
+        
         <activity android:name="org.achartengine.GraphicalActivity" />
     </application>
 
