--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -47,6 +47,10 @@
             android:screenOrientation="portrait" android:windowSoftInputMode="stateHidden">
         </activity>
         
+        <activity android:name=".FileManagerActivity" android:label="File Manager"
+            android:screenOrientation="portrait" android:windowSoftInputMode="stateHidden">            
+        </activity>
+        
         <activity android:name="org.achartengine.GraphicalActivity" />
     </application>
 
