--- a/branches/RealSwingV1/AndroidManifest.xml
+++ b/branches/RealSwingV1/AndroidManifest.xml
@@ -35,7 +35,7 @@
         </activity>
         
         <activity android:name=".SwingGraphActivity" android:label="Swing Database Graph"
-            android:windowSoftInputMode="stateHidden">            
+            android:windowSoftInputMode="stateHidden" android:screenOrientation="landscape">            
         </activity>
         
         <activity android:name=".StatisticsActivity" android:label="Statistics"
